added unit testing for Recipe domain class
Signed-off-by: akkinenivijay <akkineni.vijay@gmail.com>